[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "image-combiner"
version = "0.1.0"
description = "Combine multiple images into one — vertical stack or side by side."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["Pillow>=10.0.0"]

[project.scripts]
image-combiner = "image_combiner:main"

[project.urls]
Homepage = "https://github.com/csbisht/image-combiner"
Issues = "https://github.com/csbisht/image-combiner/issues"
